@@ -184,6 +184,14 @@ public class OidcProvider implements Closeable {
                 asymmetricKeyResolver, true, oidcConfig.token().issuedAtRequired());
     }
 
+    public TokenVerificationResult verifyJwtToken(String token, boolean enforceAudienceVerification, boolean subjectRequired,
+            String nonce, boolean enforceExpReq)
+            throws InvalidJwtException {
+        return verifyJwtTokenInternal(customizeJwtToken(token), enforceAudienceVerification, subjectRequired, nonce,
+                (requiredAlgorithmConstraints != null ? requiredAlgorithmConstraints : ASYMMETRIC_ALGORITHM_CONSTRAINTS),
+                asymmetricKeyResolver, enforceExpReq, oidcConfig.token().issuedAtRequired());
+    }
+
     public TokenVerificationResult verifyLogoutJwtToken(String token) throws InvalidJwtException {
         final boolean enforceExpReq = !oidcConfig.token().age().isPresent();
         TokenVerificationResult result = verifyJwtTokenInternal(token, true, false, null, ASYMMETRIC_ALGORITHM_CONSTRAINTS,
@@ -191,10 +199,17 @@ public class OidcProvider implements Closeable {
         if (!enforceExpReq) {
             // Expiry check was skipped during the initial verification but if the logout token contains the exp claim
             // then it must be verified
-            if (isTokenExpired(result.localVerificationResult.getLong(Claims.exp.name()))) {
-                String error = String.format("Logout token for client %s has expired", oidcConfig.clientId().get());
-                LOG.debugf(error);
-                throw new InvalidJwtException(error, List.of(new ErrorCodeValidator.Error(ErrorCodes.EXPIRED, error)), null);
+            final Long exp = result.localVerificationResult().getLong(Claims.exp.name());
+            if (exp != null) {
+                final long secondsAfterExpiry = now() / 1000 - (exp + getLifespanGrace());
+                if (secondsAfterExpiry > 0) {
+                    String error = "Logout token issued to client %s expired %d seconds ago".formatted(
+                            oidcConfig.clientId().get(),
+                            secondsAfterExpiry);
+                    LOG.warn(error);
+                    throw new InvalidJwtException(error, List.of(new ErrorCodeValidator.Error(ErrorCodes.EXPIRED, error)),
+                            null);
+                }
             }
         }
         return result;
@@ -276,13 +291,13 @@ public class OidcProvider implements Closeable {
                 detail = details.get(0).getErrorMessage();
             }
             if (oidcConfig.clientId().isPresent()) {
-                LOG.debugf("Verification of the token issued to client %s has failed: %s.", oidcConfig.clientId().get(),
+                LOG.warnf("Verification of the token issued to client %s has failed: %s.", oidcConfig.clientId().get(),
                         detail);
                 if (oidcConfig.clientName().isPresent()) {
-                    LOG.debugf(" Client name: %s", oidcConfig.clientName().get());
+                    LOG.warnf(" Client name: %s", oidcConfig.clientName().get());
                 }
             } else {
-                LOG.debugf("Token verification has failed: %s", detail);
+                LOG.warnf("Token verification has failed: %s", detail);
             }
             throw ex;
         }
@@ -296,7 +311,7 @@ public class OidcProvider implements Closeable {
         }
         TokenVerificationResult result = new TokenVerificationResult(OidcCommonUtils.decodeJwtContent(token), null);
 
-        verifyTokenAge(result.localVerificationResult.getLong(Claims.iat.name()));
+        verifyTokenAge(result.localVerificationResult().getLong(Claims.iat.name()));
         return result;
     }
 
@@ -323,7 +338,7 @@ public class OidcProvider implements Closeable {
 
             if (now - iat > oidcConfig.token().age().get().toSeconds() + getLifespanGrace()) {
                 final String errorMessage = "Token age exceeds the configured token age property";
-                LOG.debugf(errorMessage);
+                LOG.warn(errorMessage);
                 throw new InvalidJwtException(errorMessage,
                         List.of(new ErrorCodeValidator.Error(ErrorCodes.ISSUED_AT_INVALID_PAST, errorMessage)), null);
             }
@@ -372,7 +387,7 @@ public class OidcProvider implements Closeable {
                 });
     }
 
-    public Uni<TokenIntrospection> introspectToken(String token, boolean idToken, Long expiresIn,
+    public Uni<TokenIntrospection> introspectToken(String token, TokenType tokenType, Long expiresIn,
             boolean fallbackFromJwkMatch) {
         if (client.getMetadata().getIntrospectionUri() == null) {
             String errorMessage = String.format("Token issued to client %s "
@@ -381,7 +396,7 @@ public class OidcProvider implements Closeable {
                     + "please check if your OpenId Connect Provider supports the token introspection",
                     oidcConfig.clientId().get());
 
-            throw new AuthenticationFailedException(errorMessage, tokenMap(token, idToken));
+            throw new AuthenticationFailedException(errorMessage, tokenMap(token, tokenType));
         }
         return client.introspectAccessToken(token).onItemOrFailure()
                 .transform(new BiFunction<TokenIntrospection, Throwable, TokenIntrospection>() {
@@ -389,7 +404,7 @@ public class OidcProvider implements Closeable {
                     @Override
                     public TokenIntrospection apply(TokenIntrospection introspectionResult, Throwable t) {
                         if (t != null) {
-                            throw new AuthenticationFailedException(t, tokenMap(token, idToken));
+                            throw new AuthenticationFailedException(t, tokenMap(token, tokenType));
                         }
                         Long introspectionExpiresIn = introspectionResult.getLong(OidcConstants.INTROSPECTION_TOKEN_EXP);
                         if (introspectionExpiresIn == null && expiresIn != null) {
@@ -397,16 +412,16 @@ public class OidcProvider implements Closeable {
                             introspectionExpiresIn = now() + expiresIn;
                         }
                         if (!introspectionResult.isActive()) {
-                            verifyTokenExpiry(token, idToken, introspectionExpiresIn);
+                            verifyTokenExpiry(token, tokenType, introspectionExpiresIn);
                             throw new AuthenticationFailedException(
                                     String.format("Token issued to client %s is not active", oidcConfig.clientId().get()),
-                                    tokenMap(token, idToken));
+                                    tokenMap(token, tokenType));
                         }
-                        verifyTokenExpiry(token, idToken, introspectionExpiresIn);
+                        verifyTokenExpiry(token, tokenType, introspectionExpiresIn);
                         try {
                             verifyTokenAge(introspectionResult.getLong(OidcConstants.INTROSPECTION_TOKEN_IAT));
                         } catch (InvalidJwtException ex) {
-                            throw new AuthenticationFailedException(ex, tokenMap(token, idToken));
+                            throw new AuthenticationFailedException(ex, tokenMap(token, tokenType));
                         }
 
                         if (requiredClaims != null) {
@@ -414,7 +429,7 @@ public class OidcProvider implements Closeable {
                                 final String requiredClaimName = requiredClaim.getKey();
                                 if (!introspectionResult.contains(requiredClaimName)) {
                                     LOG.debugf("Introspection claim %s is missing", requiredClaimName);
-                                    throw new AuthenticationFailedException(tokenMap(token, idToken));
+                                    throw new AuthenticationFailedException(tokenMap(token, tokenType));
                                 }
                                 final Set<String> requiredClaimValues = requiredClaim.getValue();
                                 if (requiredClaimValues.size() == 1) {
@@ -433,8 +448,8 @@ public class OidcProvider implements Closeable {
                                 try {
                                     actualClaimValueArray = requireNonNull(introspectionResult.getArray(requiredClaimName));
                                 } catch (Exception ignored) {
-                                    LOG.debugf("Introspection claim %s is neither string or array", requiredClaimName);
-                                    throw new AuthenticationFailedException(tokenMap(token, idToken));
+                                    LOG.debugf("Introspection claim %s is neither string nor array", requiredClaimName);
+                                    throw new AuthenticationFailedException(tokenMap(token, tokenType));
                                 }
                                 requiredClaimValuesLoop: for (String requiredClaimValue : requiredClaimValues) {
                                     for (int i = 0; i < actualClaimValueArray.size(); i++) {
@@ -449,7 +464,7 @@ public class OidcProvider implements Closeable {
                                     }
                                     LOG.debugf("Value of the introspection claim %s does not match required value of %s",
                                             requiredClaimName, requiredClaimValue);
-                                    throw new AuthenticationFailedException(tokenMap(token, idToken));
+                                    throw new AuthenticationFailedException(tokenMap(token, tokenType));
                                 }
                             }
                         }
@@ -460,19 +475,24 @@ public class OidcProvider implements Closeable {
                 });
     }
 
-    private void verifyTokenExpiry(String token, boolean idToken, Long exp) {
-        if (isTokenExpired(exp)) {
-            String error = String.format("Token issued to client %s has expired", oidcConfig.clientId().get());
-            LOG.debugf(error);
+    private void verifyTokenExpiry(String token, TokenType tokenType, Long exp) {
+        if (exp == null) {
+            return;
+        }
+        final long secondsAfterExpiry = now() / 1000 - (exp + getLifespanGrace());
+        if (secondsAfterExpiry > 0) {
+            String error = "Token issued to client %s expired %d seconds ago".formatted(oidcConfig.clientId().get(),
+                    secondsAfterExpiry);
+            if (tokenType == TokenType.BEARER_ACCESS_TOKEN) {
+                LOG.warn(error);
+            } else {
+                LOG.debug(error);
+            }
             throw new AuthenticationFailedException(
                     new InvalidJwtException(error,
                             List.of(new ErrorCodeValidator.Error(ErrorCodes.EXPIRED, error)), null),
-                    tokenMap(token, idToken));
+                    tokenMap(token, tokenType));
         }
-    }
-
-    private boolean isTokenExpired(Long exp) {
-        return exp != null && now() / 1000 > exp + getLifespanGrace();
     }
 
     private int getLifespanGrace() {
@@ -742,8 +762,9 @@ public class OidcProvider implements Closeable {
         }
     }
 
-    private static Map<String, Object> tokenMap(String token, boolean idToken) {
-        return Map.of(idToken ? OidcConstants.ID_TOKEN_VALUE : OidcConstants.ACCESS_TOKEN_VALUE, token);
+    private static Map<String, Object> tokenMap(String token, TokenType tokenType) {
+        return Map.of(tokenType == TokenType.ID_TOKEN ? OidcConstants.ID_TOKEN_VALUE : OidcConstants.ACCESS_TOKEN_VALUE,
+                token);
     }
 
     private static final class CatchingErrorCodeValidator extends ErrorCodeValidatorAdapter {
